--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 server.port=9080
 aws.dynamodb.endpoint=https://dynamodb.us-east-1.amazonaws.com
-aws.dynamodb.accessKey=defualtAKIAWVXADIROEHDZ24NZ
-aws.dynamodb.secretKey=defaulto2Q9HlspgTMRA9JfLBy+0adCtLXiFmUyBJU47NO9
+aws.dynamodb.accessKey=AKIAWVXADIROEHDZ24NZ
+aws.dynamodb.secretKey=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
+weather.service.header.key.name=X-RapidAPI-Key
+weather.service.header.key.value=23a61627c3msh358b27a79119c86p127f69jsn8007c25c0909
+weather.service.header.host.name=X-RapidAPI-Host
+weather.service.header.host.value=visual-crossing-weather.p.rapidapi.com
